--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
-    "start": "sirv public",
+    "start": "node app.js",
     "start:dev": "sirv public --dev",
-    "run": "node app.js"
   }
 }
