--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
-    "express": "^4.17.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.10.1",
     "rollup-plugin-commonjs": "^9.3.4",
@@ -19,6 +18,9 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "node app.js",
-    "start:dev": "sirv public --dev",
+    "start:dev": "sirv public --dev"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
